店铺营业状态设置业务代码开发

--- a/sky-server/src/main/resources/application-dev.yml
+++ b/sky-server/src/main/resources/application-dev.yml
@@ -11,3 +11,6 @@ sky:
     access-key-id: ${ACCESS_KEY_ID}
     access-key-secret: ${ACCESS_KEY_SECRET}
     bucket-name: shx-sky-itcast
+  redis:
+    host: localhost
+    port: 6379
