管理端订单模块业务代码开发

--- a/sky-server/src/main/resources/application.yml
+++ b/sky-server/src/main/resources/application.yml
@@ -54,3 +54,8 @@ sky:
     appid: ${sky.wechat.appid}
     secret: ${sky.wechat.secret}
 
+  shop:
+    address: 山东省泰安市泰山区乐亿广告
+  baidu:
+    ak: LE7El16ziGc8kJtyKb1gsAlLf0f3wvet
+
